--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
+management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:h2:mem:socialdb
 spring.datasource.driverClassName=org.h2.Driver
-logging.level.org.springframework: DEBUG
+logging.level.org.springframework= DEBUG
+
 #spring.data.rest.default-page-size=5
 #spring.security.user.name=username
 #spring.security.user.password=password
