--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
 management.endpoints.web.exposure.include=*
+management.security.enabled=false
 spring.datasource.url=jdbc:h2:mem:socialdb
 spring.datasource.driverClassName=org.h2.Driver
 logging.level.org.springframework= DEBUG
