dao and dto has been added for tags

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:h2:mem:socialdb
 spring.datasource.driverClassName=org.h2.Driver
 logging.level.org.springframework= DEBUG
+server.port=8083
 
 #spring.data.rest.default-page-size=5
 #spring.security.user.name=username
