--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
+
 management.endpoints.web.exposure.include=*
 #management.security.enabled=false
-spring.datasource.url=jdbc:h2:mem:socialdb
-spring.datasource.driverClassName=org.h2.Driver
 logging.level.org.springframework= DEBUG
 server.port=8083
+spring.datasource.url= jdbc:mysql://localhost:3306/mydb?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= test
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= create
+spring.datasource.initialization-mode=always
+
+# App Properties
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
+
 
 #spring.data.rest.default-page-size=5
 #spring.security.user.name=username
