removing redundant code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.hibernate.ddl-auto= create
 spring.datasource.initialization-mode=always
 
 # App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+fhd.app.jwtSecret= bezKoderSecretKey
+fhd.app.jwtExpirationMs= 86400000
 
 
 #spring.data.rest.default-page-size=5
