--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto= create
 spring.datasource.initialization-mode=always
 
 # App Properties
-fhd.app.jwtSecret= bezKoderSecretKey
+fhd.app.jwtSecret= firozSecretKey
 fhd.app.jwtExpirationMs= 86400000
 
 
