--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,19 @@
 management.endpoints.web.exposure.include=*
 #management.security.enabled=false
 logging.level.org.springframework= DEBUG
-server.port=8083
+server.port=8080
+
+
 spring.datasource.url= jdbc:mysql://localhost:3306/mydb?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= test
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:todos}
+#spring.datasource.username=${RDS_USERNAME:todos-user}
+#spring.datasource.password=${RDS_PASSWORD:dummytodos}
+
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= create
 spring.datasource.initialization-mode=always
