moved data sql to resources and now data.sql is working perfectly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,16 +5,16 @@ logging.level.org.springframework= DEBUG
 server.port=8080
 
 # Use this if you want to create a db
-#spring.datasource.url= jdbc:mysql://localhost:3306/mydb?useSSL=false
-#spring.datasource.username= root
-#spring.datasource.password= test
+spring.datasource.url= jdbc:mysql://localhost:3306/mydb?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= test
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Use this if you want to use docker : docker-compose.yml is created based on this
-spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:todos}
-spring.datasource.username=${RDS_USERNAME:todos-user}
-spring.datasource.password=${RDS_PASSWORD:dummytodos}
+#spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:todos}
+#spring.datasource.username=${RDS_USERNAME:todos-user}
+#spring.datasource.password=${RDS_PASSWORD:dummytodos}
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= create
