modified data.sql file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 management.endpoints.web.exposure.include=*
 #management.security.enabled=false
 logging.level.org.springframework= DEBUG
-server.port=8080
+server.port=8083
 
 # Use this if you want to create a db
 spring.datasource.url= jdbc:mysql://localhost:3306/mydb?useSSL=false
 spring.datasource.username= root
-spring.datasource.password= test
+spring.datasource.password= #y2kH2Oami
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
